--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  
+<meta name="google-site-verification" content="vUECXt5poge5aDyA-2l7qz0LR8R9buEecqm4Llr9QLY" />
+<meta name="naver-site-verification" content="b77bd74ed172f8644b51d1826eed51a295e36c48" />  
   
   
   
@@ -429,3 +429,4 @@
     </div>
 </body>
 </html>
+
